refactor: 完成管道追踪与记忆系统重构
这是一次大规模的系统重构，包含以下核心变更：
1. 新增完整的PipelineTrace系统，实现管道执行全链路追踪，包括阶段、Agent迭代、工具调用的结构化日志
2. 重构记忆系统：拆分分层记忆为双源分离架构，使用JPA结构化记忆+Cognee知识图谱
3. 更新系统提示词模板到v5，新增知识图谱和精确记忆块注入
4. 简化查询分析逻辑，仅对数学计算跳过记忆注入
5. 优化工具调用阶段的日志和追踪记录
6. 重构QueryAnalyzer与QueryAnalysisResult，支持自定义分析来源
7. 优化管道各阶段的日志输出与执行记录